unpackaged/main/default/objects/cmbls__Queued_Event__c/cmbls__Queued_Event__c.object-meta.xml
<CustomObject>
    <label>Queued Event</label>
    <nameField>
        <displayFormat>QE-{0000}</displayFormat>
        <label>Queued Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Queued Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>