unpackaged/main/default/objects/cmbls__Queued_Event__c/fields/Canceled__c.field-meta.xml
<CustomField>
    <fullName>Canceled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system will mark this field as checked if the conditions no longer applies</description>
    <inlineHelpText>The system will mark this field as checked if the conditions no longer applies</inlineHelpText>
    <label>Canceled</label>
    <type>Checkbox</type>
</CustomField>