unpackaged/main/default/objects/cmbls__Queued_Event__c/fields/Deleted_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Deleted_Record_Id__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system will mark this field as checked if the related record Id no longer exist</description>
    <inlineHelpText>The system will mark this field as checked if the related record Id no longer exist</inlineHelpText>
    <label>Deleted Record Id</label>
    <type>Checkbox</type>
</CustomField>