unpackaged/main/default/objects/cmbls__Queued_Event__c/fields/Process_On__c.field-meta.xml
<CustomField>
    <fullName>Process_On__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date when the Queued Event should be processed if it's in the future, if empty, the Queued Event will be processed next run.</description>
    <inlineHelpText>Date when the Queued Event should be processed if it's in the future, if empty, the Queued Event will be processed next run.</inlineHelpText>
    <label>Process On</label>
    <type>Date</type>
</CustomField>